3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

MSW 2001/03/04:
TODO: add re-connecting player to new client if client logs in with
    right name/password.
common/init.c: Open up the logfile with the provide filename when given
    the -log option.
server/init.c: Make set_logfile a first pass option so the init_library
    has the right logfile name to work with.
server/main.c: Fix crash if map has an exit path yet that file does not
    exist.  Give proper error message.


MSW 2001/03/01:
server/main.c: Modified random_map code so the server will not
     crash if the exit object has no message (and thus variables to set
     for the random map).
     Modified so that golems move away from player when player
     changes map.  Values were reversed before, causing the golem to move
     towards the player.

MSW 2001/02/25: General player login cleanup.  This should fix the crash
    when players re-roll stats too often.  So far, it also seems to
    have the additional effect that calculated players on map now appears
    to be correct.
common/player.c: No longer allocate the player object structure in
    get_player_ob (function is really misnamed).  Callers to this function
    were not using the allocated function.
server/login.c: Add leave_map call when player is loaded.
server/main.c: Add leave_map function.
server/player.c: Move get_player function to start of file - can declare
    it static that way.  Move some initialize from add_player to get_player.
    Add set_first_map function.  Add appropriate calls to leave_map
    and set_first_map when players join and leaves the game.

MSW 2001/02/22: